test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/internal_hides_external_linkage.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: read_x
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
